# klokanuv-kufr-testing

./: .gitignore  README.md  flake.nix  mkdocs.yml
server/: .gitignore  db.sqlite3  manage.py  openapi-schema.yml  pyproject.toml
server/invitations/: adapters.py  admin.py  apps.py  base_invitation.py  forms.py  models.py
server/invitations/migrations/: 0004_invitation_school_alter_invitation_id.py  0005_alter_invitation_options_alter_invitation_accepted_and_more.py  0005_alter_invitation_options_invitation_group_and_more.py  0006_invitation_group.py
server/klokan/: settings.py  urls.py  wsgi.py
server/record_sheet/: TODO.txt  admin.py  apps.py  filters.py  forms.py  models.py  permissions.py  serializers.py  signals.py  views.py
server/record_sheet/migrations/: 0001_initial.py  0002_alter_task_difficulty.py  0002_assessmenttype_is_in_demo_and_more.py  0002_category_is_in_demo.py  0002_child_school_invitation.py  0002_invitation.py  0002_invoice_parameter_school_cin_alter_child_school_and_more.py  0002_invoice_parameter_school_cin_school_variable_symbol_and_more.py  0003_alter_assessment_options_alter_child_options_and_more.py  0003_assessmenttype_is_in_demo_and_more.py  0003_auto_20220404_1228.py  0003_rename_task_text_task_task_description_task_codename_and_more.py  0004_alter_assessment_options_alter_child_options_and_more.py  0004_alter_task_difficulty.py  0004_alter_user_options_school_is_in_demo_and_more.py  0004_alter_user_options_school_is_prepaid_and_more.py  0005_alter_school_options_alter_child_school_and_more.py  (+12 more)
server/templatetags/: filter.py
(+190 files in other folders)
